Google button sizing issue #9, Fixed on mobile home page.

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -45,6 +45,10 @@
             h4 {
                 text-transform: uppercase;
             }
+            .btn {
+                margin: 2rem auto 0;
+                display: block;
+            }
         }
     }
 }
